--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Acervo teatral</title>
+    <title>Acervo artístico</title>
 </head>
 <body>
         <header>
-            <h1>Acervo teatral</h1>
+            <h1>Acervo artístico</h1>
         </header>
         <main>
             <section>
-                <input type="text" placeholder="Digite o nome do artista, peça ou gênero teatral">
+                <input type="text" placeholder="Digite o nome do artista, obra, gênero, ideologia..." id="campo-pesquisa">
                 <button onclick="pesquisar()">Pesquisar</button>
             </section>
             <section id="resultados-pesquisa" class="resultados-pesquisa">
             </section>
         </main>
         <footer>
-            <p>2024 - Acervo Teatral. Todos os direitos reservados</p>
+            <p>2024 - Acervo Artístico. Todos os direitos reservados</p>
             <p>Entre em contato pelo email: luccamlino5@gmail.com</p>
         </footer>
     <script src="artistas.js"></script>
